--- a/src/app/views/dialogs/registro-estudiante/registro-estudiante.component.scss
+++ b/src/app/views/dialogs/registro-estudiante/registro-estudiante.component.scss
@@ -6,3 +6,10 @@
     width: 150px;
     height: 40px;
 }
+.text-danger{
+    color: #f44336;
+}
+.edad{
+    font-size: 20px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
