--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,8 @@
 
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+// .error{
+//   .mat-form-field-appearance-legacy .mat-form-field-underline {
+//     background-color: #f44336 !important;
+//   }
+// }
