--- a/src/app/views/dialogs/buscar-alumnos-pension/buscar-alumnos-pension.component.html
+++ b/src/app/views/dialogs/buscar-alumnos-pension/buscar-alumnos-pension.component.html
@@ -3,7 +3,7 @@
         <mat-grid-tile [colspan]="9" [rowspan]="1">
             <mat-form-field class="example-form-field">
                 <mat-label>Buscar</mat-label>
-                <input matInput type="text">
+                <input matInput type="text" (keyup)="applyFilter($event)">
                 <button mat-button matSuffix mat-icon-button aria-label="Search">
                     <mat-icon>search</mat-icon>
                 </button>
@@ -15,12 +15,51 @@
             </button>
         </mat-grid-tile>
     </mat-grid-list>
-    <div class="example-table-container">
+    <div class="example-table-container" *ngIf="dataSource">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="created"
+         matSortDisableClear matSortDirection="desc">
 
+            <!-- ID Column -->
+            <ng-container matColumnDef="id_persona">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+              <td mat-cell *matCellDef="let row"> {{row.id_persona}} </td>
+            </ng-container>
+        
+            <!-- Progress Column -->
+            <ng-container matColumnDef="nom_persona">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombres </th>
+              <td mat-cell *matCellDef="let row"> {{row.nom_persona}}</td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="grado">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
+              <td mat-cell *matCellDef="let row"> {{row.grado}} {{row.nivel}}</td>
+            </ng-container>
+        
+            <!-- Color Column -->
+            <ng-container matColumnDef="nro">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> # </th>
+              <td mat-cell *matCellDef="let row" > 
+                <section class="example-section">
+                    <mat-checkbox class="example-margin" [checked]="selected === row.id_persona" (change)="selected = row.id_persona" ></mat-checkbox>
+                </section>
+              </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No hay alumnos registrados</td>
+            </tr>
+          </table>
+          <mat-paginator #paginator [length]="resultsLength" [pageSize]="5" ></mat-paginator>
        
     </div>
-    <mat-paginator [pageSize]="30"></mat-paginator>
+   
     <div class="footer_btn">
-        <button class="btn_nuevo" mat-raised-button color="primary" >Aceptar</button>
+        <button class="btn_nuevo" mat-raised-button color="primary" (click)="listarPagos()" [disabled]="selected=='0'">Aceptar</button>
     </div>
 </div>
