--- a/src/app/views/dialogs/buscar-alumnos-pension/buscar-alumnos-pension.component.scss
+++ b/src/app/views/dialogs/buscar-alumnos-pension/buscar-alumnos-pension.component.scss
@@ -1,7 +1,4 @@
 
-  table {
-    width: 600px;
-  }
 
   .btn_nuevo{
     width: 130px;
@@ -16,3 +13,15 @@
 .btn_close{
     top: -30px !important;
 }
+table {
+    width: 100%;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  td, th {
+    width: 35%;
+  }
