--- a/src/app/views/estudiantes/estudiantes.component.scss
+++ b/src/app/views/estudiantes/estudiantes.component.scss
@@ -8,6 +8,8 @@
     padding: 10%;
     text-align: center;
     width: 240px;
+    line-break: anywhere;
+    height: 300px;
   }
 .mat-form-field{
     width: 100%;
@@ -16,5 +18,9 @@
 .btn_nuevo{
     width: 180px;
     height: 50px;
+}
+img{
+    width: 100px;
+    height: 100px;
 }
 
