--- a/src/app/views/pagos/pagos.component.html
+++ b/src/app/views/pagos/pagos.component.html
@@ -14,7 +14,7 @@
             <button mat-raised-button disabled>Anular</button>
         </mat-grid-tile>
         <mat-grid-tile [colspan]="1" [rowspan]="1">
-            <button mat-raised-button color="primary" (click)="openDialogPagar()">Pagar</button>
+            <button mat-raised-button color="primary" (click)="openDialogPagar()" [disabled]="pagosSelect.length == 0">Pagar</button>
         </mat-grid-tile>
     </mat-grid-list>
 
@@ -23,35 +23,42 @@
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
+        <ng-container matColumnDef="nro">
             <th mat-header-cell *matHeaderCellDef> No. </th>
             <td mat-cell *matCellDef="let element">
                 <section class="example-section">
-                    <mat-checkbox class="example-margin" ></mat-checkbox>
+                    <mat-checkbox class="example-margin" (change)="$event.checked ? agregar(element) : quitar(element)" 
+                    [disabled]="idMovimientoPendiente != element.id_movimiento"></mat-checkbox>
                 </section>
             </td>
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="desc_pension">
             <th mat-header-cell *matHeaderCellDef> Pensión </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.desc_pension}} </td>
         </ng-container>
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
+        <ng-container matColumnDef="monto">
             <th mat-header-cell *matHeaderCellDef> Monto </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.monto}} </td>
         </ng-container>
 
         <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
+        <ng-container matColumnDef="estado">
             <th mat-header-cell *matHeaderCellDef> Estado </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
 
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">Sin pagos</td>
+        </tr>
+
+    </table>
+    <mat-paginator #paginator [length]="resultsLength" [pageSize]="11"></mat-paginator>
 </mat-card>
